# Lab_3

./: CMakeLists.txt
include/: array.h  benchmark.h  completetree.h  hashtable.h  list.h  queue.h  stack.h  twolist.h
src/: main  main.cpp  queue  queue.go
tests/: CMakeLists.txt  a.out  array_benchmark.cpp  array_test.cpp  doublelist_benchmark.cpp  doublelist_test.cpp  hashtable_benchmark.cpp  hashtable_test.cpp  list_benchmark.cpp  list_test.cpp  queue_benchmark.cpp  queue_test.cpp  stack_benchmark.cpp  stack_test.cpp  test.cpp  test_txt.txt  tree_benchmark.cpp  tree_test.cpp
tests/go/: coverage.html  coverage.out  go.mod  queue.go  queue_test.go
